mock service test and fix sonar issues